--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <p>Какой-то бессмысленный текст. просто чтоб не был пустой блок. Какой-то бессмысленный текст. просто чтоб не был пустой блок.Какой-то бессмысленный текст. просто чтоб не был пустой блок.</p>
         </div>
 
-        <div class="main info2">
+        <div class="main info">
             <h2>Header 3</h2>
             <p>Какой-то бессмысленный текст. просто чтоб не был пустой блок. Какой-то бессмысленный текст. просто чтоб не был пустой блок.Какой-то бессмысленный текст. просто чтоб не был пустой блок.</p></div>
         <div class="main pic"></div>
 
-        <div class="main button1"><a href="#">Facebook</a></div>
+        <div class="main button"><a href="#">Facebook</a></div>
  
-        <div class="main button2"><a href="#">Instagram</a></div>
+        <div class="main button"><a href="#">Instagram</a></div>
  
         <div class="main last"><a href="#">Посмотреть творчество Тани</a></div>
     </section>
