--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="main button"><a href="#">Facebook</a></div>
  
-        <div class="main button"><a href="#">Instagram</a></div>
+        <div class="main button"><a href="https://www.instagram.com/t_a_bs_/">Instagram</a></div>
  
         <div class="main last"><a href="#">Посмотреть творчество Тани</a></div>
     </section>
